Opened 5 years ago
Closed 5 years ago
#11184 closed bug (fixed)
[Bluetooth] h2generic no longer builds
Reported by: | luroh | Owned by: | oruizdorantes |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet/Bluetooth | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
hrev47784, gcc2.
$ jam -q h2generic src/add-ons/kernel/drivers/bluetooth/h2/h2generic/h2generic.cpp: In function `status_t device_control(void *, long unsigned int, void *, long unsigned int)': src/add-ons/kernel/drivers/bluetooth/h2/h2generic/h2generic.cpp:667: warning: statement with no effect src/add-ons/kernel/drivers/bluetooth/h2/h2generic/h2generic.cpp:676: warning: statement with no effect src/add-ons/kernel/drivers/bluetooth/h2/h2generic/h2generic.cpp:683: warning: statement with no effect
I apparently missed that including the optional Bluetooth package is effectively a NOP since http://cgit.haiku-os.org/haiku/commit/build/jam/OptionalPackages?id=98c6dfa41e20c57edf426197a8d9aab6223a59fd which is why I didn't notice the bit rot sooner.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev48246.