bluetooth: fix build.

Fixes #11184.